[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/complete.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/title.png" type="Texture" id=3]
[ext_resource path="res://assets/flip.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/wrong.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/right.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/win.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/ui/return.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/pause.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/play.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/Nunito-Bold.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 11 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.172549, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -240.0
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 13
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -117.0
margin_right = 315.0
margin_bottom = 117.0
texture = ExtResource( 3 )

[node name="completed" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -73.0
margin_right = 256.0
margin_bottom = 73.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardFlip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Right" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Labels" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -200.0
margin_right = -40.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Labels"]
margin_top = 6.0
margin_right = 598.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Placar: 0"
valign = 1

[node name="Timer" type="Label" parent="Labels"]
margin_left = 602.0
margin_top = 6.0
margin_right = 1200.0
margin_bottom = 94.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "00:00"
align = 2
valign = 1

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -100.0
margin_right = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton1" type="TextureButton" parent="Buttons"]
margin_right = 397.0
margin_bottom = 106.0
grow_horizontal = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="TextureButton2" type="TextureButton" parent="Buttons"]
margin_left = 401.0
margin_right = 798.0
margin_bottom = 106.0
size_flags_horizontal = 3
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 3

[node name="TextureButton3" type="TextureButton" parent="Buttons"]
margin_left = 802.0
margin_right = 1200.0
margin_bottom = 106.0
size_flags_horizontal = 3
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="Buttons/TextureButton1" to="." method="_on_TextureButton1_pressed"]
[connection signal="pressed" from="Buttons/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Buttons/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
